test/parse/bad-string-hex-escape.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func) (export "foo\az" (func 0)))
(;; STDERR ;;;
out/test/parse/bad-string-hex-escape.txt:3:28: error: bad escape "\a"
(module (func) (export "foo\az" (func 0)))
                           ^^
;;; STDERR ;;)
